Style and class updated

--- a/mobile-navbar.html
+++ b/mobile-navbar.html
@@ -14,15 +14,17 @@
     </head>
     <body>
         <div class="wrapper">
-            <p>Resize below 769px to view the navbar.</p>
+            <p>Resize below 767px to view the navbar.</p>
             <div
                 id="mobile-navbar-container"
                 class="navbar-container navbar-container-mobile"
             >
                 <!-- navbar items -->
-                <ul class="navbar__list">
-                    <li class="navbar__item-container">
-                        <div class="navbar__item DeYlt navbar__item--active">
+                <ul class="navbar__list gsCWf EJVsl">
+                    <li class="navbar__item-container gsCWf OtrSK EJVsl">
+                        <div
+                            class="navbar__item gsCWf zaSgn OtrSK EJVsl DeYlt navbar__item--active"
+                        >
                             <div class="navbar__icon-container">
                                 <div class="svg-wrapper">
                                     <svg
@@ -63,8 +65,8 @@
                             <span class="navbar__text">Home</span>
                         </div>
                     </li>
-                    <li class="navbar__item-container">
-                        <div class="navbar__item DeYlt">
+                    <li class="navbar__item-container gsCWf OtrSK EJVsl">
+                        <div class="navbar__item gsCWf zaSgn OtrSK EJVsl DeYlt">
                             <div class="navbar__icon-container">
                                 <div class="svg-wrapper">
                                     <svg
@@ -106,8 +108,8 @@
                             <span class="navbar__text">About</span>
                         </div>
                     </li>
-                    <li class="navbar__item-container">
-                        <div class="navbar__item DeYlt">
+                    <li class="navbar__item-container gsCWf OtrSK EJVsl">
+                        <div class="navbar__item gsCWf zaSgn OtrSK EJVsl DeYlt">
                             <div class="navbar__icon-container">
                                 <div class="svg-wrapper">
                                     <svg
@@ -149,8 +151,8 @@
                             <span class="navbar__text">Skills</span>
                         </div>
                     </li>
-                    <li class="navbar__item-container">
-                        <div class="navbar__item DeYlt">
+                    <li class="navbar__item-container gsCWf OtrSK EJVsl">
+                        <div class="navbar__item gsCWf zaSgn OtrSK EJVsl DeYlt">
                             <div class="navbar__icon-container">
                                 <div class="svg-wrapper">
                                     <svg
@@ -192,8 +194,8 @@
                             <span class="navbar__text">Portfolio</span>
                         </div>
                     </li>
-                    <li class="navbar__item-container">
-                        <div class="navbar__item DeYlt">
+                    <li class="navbar__item-container gsCWf OtrSK EJVsl">
+                        <div class="navbar__item gsCWf zaSgn OtrSK EJVsl DeYlt">
                             <div class="navbar__icon-container">
                                 <div class="svg-wrapper">
                                     <svg
@@ -239,7 +241,7 @@
                 <!-- close icon -->
                 <div
                     id="navbar-close-icon"
-                    class="navbar__close-icon-container DeYlt"
+                    class="navbar__close-icon-container CzomY DeYlt"
                 >
                     <div class="svg-wrapper">
                         <svg
